--- a/styles/life-coaching.module.scss
+++ b/styles/life-coaching.module.scss
@@ -6,19 +6,23 @@
     font-size: 20px;
     background: white;
     opacity: 0.7;
-    padding: 35px 30px;
+    padding: 20px;
+
+    top: 50%;
+    transform: translateY(-50%);
 
     @include min-width(medium) {
-        transform: translate(-50%, -50%);
+        /*transform: translate(-50%, -50%);
         top: 50%;
-        left: 50%;
+        left: 50%;*/
+        padding: 35px 30px;
     }
     @include max-width(medium) {
         /*top: 20%;*/
         left: 5%;
         right: 5%;
-        top: 50%;
-        transform: translateY(-50%);
+        /*top: 50%;
+        transform: translateY(-50%);*/
     }
 }
 
@@ -61,7 +65,7 @@
 
 .container {
     @include min-width(large) {
-        padding: 60px 0;
+        padding: 60px 30px;
     }
 }
 
@@ -71,7 +75,11 @@
 
 .image {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     object-fit: cover;
     object-position: 50% 50%;
+
+    @include min-width(medium) {
+        height: 100vh;
+    }
 }
