--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -181,7 +181,7 @@
 
 .links {
   text-align: center;
-  animation: 1s ease-out 0s 1 slideInFromLeft;
+  //animation: 1s ease-out 0s 1 slideInFromLeft;
   @include max-width(medium) {
     font-size: 16px;
   }
@@ -206,7 +206,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  animation: 1s ease-out 1s 0 fadein;
+  //animation: 1s ease-out 1s 0 fadein;
   font-size: 20px;
   background: white;
   opacity: 0.6;
@@ -222,7 +222,7 @@
 }
 
 
-
+/*
 
 @keyframes slideInFromLeft {
   0% {
@@ -236,4 +236,4 @@
 @keyframes fadein {
   from { opacity: 0}
   to   { opacity: 1}
-}
+}*/
