--- a/styles/life-coaching.module.scss
+++ b/styles/life-coaching.module.scss
@@ -2,7 +2,7 @@
 
 .textWrapper {
     position: absolute;
-    animation: 1s ease-out 1s 0 fadein;
+    //animation: 1s ease-out 1s 0 fadein;
     font-size: 20px;
     background: white;
     opacity: 0.7;
