--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -155,6 +155,22 @@
   text-align: center;
 }*/
 
+.wrapper {
+  @include min-width(large) {
+    display: grid;
+  }
+  @include max-width(large) {
+    padding: 30px;
+  }
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 20px;
+    max-width: 1280px;
+    margin: 0 auto;
+    //padding: 30px 30px 100px 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    position: relative;
+  }
+
 .leftColumn {
   position: relative;
   z-index: 9;
@@ -171,6 +187,7 @@
   color: black;
   padding-bottom: 15px;
   text-decoration: none;
+  font-size: 16px;
   &:hover {
     /*color: #a9a9a9;*/
     color: #b5651d;
@@ -182,9 +199,6 @@
 .links {
   text-align: center;
   //animation: 1s ease-out 0s 1 slideInFromLeft;
-  @include max-width(medium) {
-    font-size: 16px;
-  }
   /*a {
       color: black;
       display: block;
