--- a/styles/life-coaching.module.scss
+++ b/styles/life-coaching.module.scss
@@ -7,6 +7,7 @@
     background: white;
     opacity: 0.7;
     padding: 20px;
+    width: 100%;
 
     top: 50%;
     transform: translateY(-50%);
@@ -18,9 +19,9 @@
         padding: 35px 30px;
     }
     @include max-width(medium) {
-        /*top: 20%;*/
+        /*top: 20%;
         left: 5%;
-        right: 5%;
+        right: 5%;*/
         /*top: 50%;
         transform: translateY(-50%);*/
     }
@@ -29,7 +30,7 @@
 .button {
     margin-top: 30px;
     border: none;
-    font-size: 20px;
+    //font-size: 20px;
     background: transparent;
     text-decoration: underline;
 }
@@ -49,7 +50,7 @@
 .menuItem {
     cursor: pointer;
     padding-right: 20px;
-    font-size: 24px;
+    font-size: 18px;
     text-transform: capitalize;
 }
 
@@ -75,11 +76,18 @@
 
 .image {
     width: 100%;
-    height: 80vh;
+    height: 70vh;
     object-fit: cover;
     object-position: 50% 50%;
 
     @include min-width(medium) {
-        height: 100vh;
+        //height: 100vh;
     }
+}
+
+.backButtonWrapper {
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    left: 30px;
 }
