--- a/styles/clinical-psychology.module.scss
+++ b/styles/clinical-psychology.module.scss
@@ -17,6 +17,7 @@
     z-index: 9;
     grid-column: 1/5;
     font-size: 20px;
+    //animation: expand .8s ease forwards;
   
     /* vertical alignment */
     display: flex;
