--- a/styles/sharedStyles.scss
+++ b/styles/sharedStyles.scss
@@ -2,6 +2,7 @@
 @import './settings.scss';
 
 .globalPageWrapper {
+  animation: expand .8s ease forwards;
   @include min-width(large) {
     display: grid;
     //padding: 0 30px;
@@ -78,4 +79,22 @@
 @keyframes fadein {
     from { opacity: 0}
     to   { opacity: 1}
+  }
+
+  @keyframes expand {
+    0% {
+      transform: translateX(1400px);
+    }
+    100% {
+      transform: translateX(0px);
+    }
+  }
+  
+  @keyframes expandBackwards {
+    0% {
+      transform: translateX(-1400px);
+    }
+    100% {
+      transform: translateX(0px);
+    }
   }
