--- a/components/BacktoHomeButton/BacktoHomeButton.module.scss
+++ b/components/BacktoHomeButton/BacktoHomeButton.module.scss
@@ -1,4 +1,4 @@
-@import './sharedStyles.scss';
+@import '../../styles/sharedStyles.scss';
 
 .wrapper {
     /*position: absolute;
@@ -20,5 +20,6 @@
     font-size: 14px;
     //left: 30px;
     bottom: 0;
+    padding: 30px 0;
   }
   
