--- a/components/ExpandableListing/ExpandableListing.module.scss
+++ b/components/ExpandableListing/ExpandableListing.module.scss
@@ -1,11 +1,10 @@
-@import './sharedStyles.scss';
+@import '../../styles/sharedStyles.scss';
 
 .wrapper {
     border-bottom: 1px solid black;
     padding: 0 20px;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     justify-content: center;
     @include max-width(medium) {
         font-size: 12px;
@@ -15,7 +14,6 @@
 .title {
     cursor: pointer;
     position: relative;
-    //padding-bottom: 20px;
     display: flex;
     align-items: center;
 }
@@ -60,15 +58,13 @@
 }
 
 .tags {
+    font-family: Lato;
     span:first-child {
         margin-left: 20px;
     }
     @include max-width(medium) {
         span {
             display: none;
-        }
-        span:first-child {
-            display: block;
         }
     }
 }
