--- a/styles/sharedStyles.scss
+++ b/styles/sharedStyles.scss
@@ -12,7 +12,7 @@
     max-width: 1280px;
     margin: 0 auto;
     padding: 30px 30px 100px 30px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Lato; //'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     position: relative;
   }
 
@@ -28,6 +28,7 @@
   .globalTitle {
     padding: 10px 0;
     font-size: 25px;
+    font-family: Raleway;
     font-weight: 500;
     letter-spacing: 3px;
     text-decoration: none;
