--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
-@import url('http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/cs');
-@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Raleway&family=Roboto&display=swap');
 
 /* can now reference my font */
 body {
