--- a/pages/clinical-psychology/clinical-psychology.module.scss
+++ b/pages/clinical-psychology/clinical-psychology.module.scss
@@ -37,7 +37,7 @@
 
 .wrapper {
     grid-column: 1/5;
-    background: #f2f2f2;
+    background: color(white-soft);
     @include min-width(large) {
         /*padding-top: 60px;
         margin-top: 60px;*/
