--- a/pages/clinical-psychology/clinical-psychology.module.scss
+++ b/pages/clinical-psychology/clinical-psychology.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/sharedStyles.scss';
   
 .outerWrapper {
-    border: 1px solid color(black-soft);
+    //border: 1px solid color(black-soft);
 }
 
 .portrait {
