--- a/components/docs/GoodMorning/GoodMorning.module.scss
+++ b/components/docs/GoodMorning/GoodMorning.module.scss
@@ -29,5 +29,7 @@
     @include max-width(medium) {
         display: flex;
         justify-content: center;
+        flex-direction: column;
+        align-items: center;
     }
 }
