--- a/components/BacktoHomeButton/BacktoHomeButton.module.scss
+++ b/components/BacktoHomeButton/BacktoHomeButton.module.scss
@@ -9,8 +9,10 @@
 
 .spacer {
     width: 100%;
-    height: 200px;
     grid-row: 1/2;
+    @include min-width(large) {
+        height: 200px;
+    }
 }
 
 .backtoHome {
