--- a/pages/clinical-psychology/clinical-psychology.module.scss
+++ b/pages/clinical-psychology/clinical-psychology.module.scss
@@ -50,7 +50,8 @@
         padding: 60px 30px;
         position: relative;
         //background: color(white-soft);
-        background: #ff3627;
+        //background: #3b444b;
+        background: #414a4c;
         color: white;
         border-radius: 10px;
     }
