--- a/pages/writing/writing.module.scss
+++ b/pages/writing/writing.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/sharedStyles.scss';
 
 .container {
-    background-color: #fbfaf5;
+    //background-color: #fbfaf5;
     min-height: 100vh;
     animation: expand .8s ease forwards;
 }
