--- a/components/ExpandableListing/ExpandableListing.module.scss
+++ b/components/ExpandableListing/ExpandableListing.module.scss
@@ -1,80 +1,90 @@
-@import '../../styles/sharedStyles.scss';
+@import "../../styles/sharedStyles.scss";
 
 .wrapper {
-    border-bottom: 1px solid black;
-    //padding: 0 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    //align-items: center;
-    @include max-width(medium) {
-        font-size: 12px;
-    }
+  border-bottom: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  @include max-width(medium) {
+    font-size: 12px;
+  }
+}
+
+.title,
+.date {
+  font-family: "Roboto";
 }
 
 .title {
-    cursor: pointer;
-    position: relative;
-    display: flex;
-    align-items: center;
-    font-family: 'Roboto';
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  align-items: center;
+  font-family: "Roboto";
+  margin-bottom: 0;
+  color: blue;
+}
+
+.date {
+  color: gray;
+  margin-top: 10px;
 }
 
 .arrow {
-    content: '';
-    position: absolute;
-    right: 0;
-    width: 6px;
-    height: 6px;
-    border: 1px solid black;
-    margin-left: 10px;
-    transform: rotate(45deg);
-    border-left: 0;
-    border-top: 0;
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 6px;
+  height: 6px;
+  border: 1px solid black;
+  margin-left: 10px;
+  transform: rotate(45deg);
+  border-left: 0;
+  border-top: 0;
 }
 
 .rotate {
-    border: 1px solid black;
-    border-right: 0;
-    border-bottom: 0;
+  border: 1px solid black;
+  border-right: 0;
+  border-bottom: 0;
 }
 
 .content {
-    display: none;
+  display: none;
 }
 
 .showContent {
-    display: block;
-    padding: 30px 0;
-    margin: 0 0 60px;
+  display: block;
+  padding: 30px 0;
+  margin: 0 0 60px;
 }
 
 .tag {
-    border: 1px solid #d3d3d3;
-    padding: 3px 5px 5px 5px;
-    border-radius: 10px;
-    font-size: 15px;
-    margin-left: 5px;
-    font-weight: normal;
-    color: #3b444b;
+  border: 1px solid #d3d3d3;
+  padding: 3px 5px 5px 5px;
+  border-radius: 10px;
+  font-size: 15px;
+  margin-left: 5px;
+  font-weight: normal;
+  color: #3b444b;
 }
 
 .tags {
-    font-family: Lato;
-    span:first-child {
-        margin-left: 20px;
+  font-family: Lato;
+  span:first-child {
+    margin-left: 20px;
+  }
+  @include max-width(medium) {
+    span {
+      display: none;
     }
-    @include max-width(medium) {
-        span {
-            display: none;
-        }
-    }
+  }
 }
 
 .icon {
-    svg {
-        width: 20px;
-        height: 20px;
-    }
-    padding-right: 20px;
+  svg {
+    width: 20px;
+    height: 20px;
+  }
+  padding-right: 20px;
 }
